--- a/index.html
+++ b/index.html
@@ -9,35 +9,36 @@
     <link rel="stylesheet" href="./css/style.min.css">
 </head>
 
-<body <div class="container">
-    <form name="form" action="">
-        <div class="middle">
-            <h1>Instagram</h1>
-            <div id="fancy-inputs">
-                <label class="input">
-                    <input name="name" type="text" required>
-                    <span><span>Name</span></span>
-                </label>
-                <label class="input">
-                    <input name="surname" type="text" required>
-                    <span><span>Surname</span></span>
-                </label>
-                <label class="input">
-                    <input name="email" type="email" required>
-                    <span><span>E-mail</span></span>
-                </label>
-                <label class="input">
-                    <input name="phone" type="tel" required>
-                    <span><span>Phone</span></span>
-                </label>
-                <label class="input">
-                    <input name="password" type="text" required>
-                    <span><span>Password</span></span>
-                </label>
+<body>
+    <div class="container">
+        <form name="form" action="">
+            <div class="middle">
+                <h1>Instagram</h1>
+                <div id="fancy-inputs">
+                    <label class="input">
+                        <input name="name" type="text" required>
+                        <span><span>Name</span></span>
+                    </label>
+                    <label class="input">
+                        <input name="surname" type="text" required>
+                        <span><span>Surname</span></span>
+                    </label>
+                    <label class="input">
+                        <input name="email" type="email" required>
+                        <span><span>E-mail</span></span>
+                    </label>
+                    <label class="input">
+                        <input name="phone" type="tel" required>
+                        <span><span>Phone</span></span>
+                    </label>
+                    <label class="input">
+                        <input name="password" type="text" required>
+                        <span><span>Password</span></span>
+                    </label>
+                </div>
+                <button type="submit" class="btn">Log In</button>
             </div>
-            <button type="submit" class="btn">Log In</button>
-        </div>
-    </form>
+        </form>
     </div>
 
 
